# authdemo

./: pyproject.toml  server.py
templates/: login.html
